--- a/bts/index.html
+++ b/bts/index.html
@@ -7,7 +7,7 @@
     <title>STEVE HOAREAU</title>
   </head>
   <body>
-    <div id="cda"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <div id="bts"></div>
+    <script type="module" src="../src/bts.ts"></script>
   </body>
 </html>
